Updated for Unstop Button

--- a/Hello.html
+++ b/Hello.html
@@ -33,11 +33,11 @@
     background-color: #1E90FF;
     transition: width 2s ease;
 }
-.hov:hover{
+/* .hov:hover{ */
     /* background: #187bcd; */
     /* width: 300px; */
     /* animation: animate1 5s linear ease-in; */
-}
+/* } */
 .hh{
     width: 0px;
     background-color: #1E90FF;
